show some changes to CSS

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <h1>Welcome to Animal Shelter!</h1>
     <h2>Here is a list of our current animals available for adoption:</h2>
     <ul id="decoration">
-        <li id="column">
+        <li class="column">
             <a href="https://en.wikipedia.org/wiki/Boston_Terrier" target="_blank"><img src="img/bostonTerrier.jpg" alt="Chongo the boston terrier">Boston Terrier - Chongo</a>
         </li>
-        <li id="column1">
+        <li class="column">
             <a href="https://en.wikipedia.org/wiki/Black_cat" target="_blank"><img src="img/blackKitten.jpg" alt="Delilah the black kitten">Black Kitten - Delilah</a>
         </li>
-        <li id="column2">
+        <li class="column">
             <a href="https://en.wikipedia.org/wiki/Hedgehog" target="_blank"><img src="img/hedgehog.jpg" alt="Sonny the hedgehog"> Hedgehog - Sonny</a>
         </li>
     </ul>
