--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Animal Shelter</title>
 </head>
 
 <body>
+    <button class="btn btn-danger" id="dark-mode">Dark Mode</button>
+    <button class="btn btn-success" id="original-mode">Original Mode</button>
     <h1>Welcome to Animal Shelter!</h1>
     <h2>Here is a list of our current animals available for adoption:</h2>
     <ul id="decoration">
